tests/preproc/include/fail002.ds

   #   include  "no-such-file.dsh"

